Fixing some more spacing and formatting in single project pages

--- a/web/app/themes/scb/assets/styles/pages/_single-project.scss
+++ b/web/app/themes/scb/assets/styles/pages/_single-project.scss
@@ -647,6 +647,9 @@ body.single-project {
         }
         .full-width-text {
           padding-left: calc(#{$project-padding} + 16px);
+          blockquote {
+            margin: 0 16px;
+          }
         }
       }
     }
